# FTX-Funding-Alerter

./: .env  README.md  bot.py  client.py  config.py  polvo.py  pyproject.toml  stats1.xlsx
