[tool.poetry]
name = "ftx_bot"
version = "0.1.0"
description = "HTTPS client that periodically queries FTX for funding rates and post it on Telegram"
authors = ["Joao Francolin"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.3"
logzero = "^1.5.0"
environs = "^8.0.0"
python-dateutil = "^2.8.1"
requests = "^2.24.0"
python-telegram-bot = "^13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
